# python-project-utils

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: branch-validation.yml  ci.yml  manual-release.yml  release.yml  validate-and-merge.yml
config/: cliff.toml  git-changelog.toml  mkdocs.yml  ruff.toml
core/: file_handler.html
project-helpers/: cliff.toml  mkdocs.yml  ruff.toml
src/commons/: __init__.py
src/commons/core/: __init__.py  basic_logger.py
templates/: cliff.toml
tests/: test_basic_logger.py
