[project]
name = "PythonProjectUtils"
authors = [
    { name = "Thiago Dias", email = "thiago@thir.info" }
]
version = "0.1.0"
description = """This project is to be used as a common project for linters, formatters and general helpers
for python projects"""
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
]
requires-python = ">=3.13"
dependencies = [
    "git-cliff>=2.10.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]
