[project]
name = "PythonProjectUtils"
authors = [
    { name = "Thiago Dias", email = "thiago@thir.info" }
]
version = "0.4.0"
description = """This project serves as a shared foundation for linters, formatters, and general utilities in Python projects."""
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "git-cliff>=2.10.0",
    "git-changelog>=1.0.0",
    "ruff>=0.12.7",
    "toml>=0.10.2",
    "setuptools>=61.0",
    "commitizen>=4.8.3",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.16.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include  = ["project_tools*"]
